<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_bridge</name>
  <version>0.1.0</version>
  <description>A ROS-CAN Message translation for Raptors PŁ Mobile Robots</description>
  <maintainer email="wisnia20012@gmail.com">Jakub Wiśniewski</maintainer>
  <maintainer email="marcinwal9@gmail.com">Marcin Walczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>can_msgs</depend>
  <build_depend>libVescCan</build_depend>
  <build_depend>rex_interfaces</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rex_interfaces</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
