<?xml version="1.0"?>
<package format="3">
  <name>mqtt_bridge</name>
  <version>0.1.0</version>
  <description>The mqtt_bridge package</description>

  <maintainer email="247733@edu.p.lodz.pl">Bartosz Mazurkiewicz</maintainer>

  <license>MIT</license>

  <author email="247733@edu.p.lodz.pl">Bartosz Mazurkiewicz</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>can_bridge</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>can_bridge</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
